# fast_api

./: pyproject.toml
fast_zero/: app.py  security.py
fast_zero/routers/: auth.py  users.py
fast_zero/schemas/: user.py
migrations/: env.py
migrations/versions/: 4e336623f342_add_update_at_users_tables.py  710bc32c510b_add_users_tables.py  93f894d53bee_add_update_users_tables.py  a2ab94fbbdf8_create_users_tables.py
tests/: conftest.py  test_app.py  test_security.py
tests/models/: test_user.py
tests/routers/: test_users.py
