[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Renato Ferreira de Assis <renato.assis@g.globo>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
python-multipart = "^0.0.9"
pyjwt = "^2.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'poetry run fastapi dev fast_zero/app.py'

pre_test = 'task lint'
test = 'poetry run pytest --cov=fast_zero -vv'
post_test = 'poetry run coverage html'

lint = 'poetry run ruff check . && poetry run ruff check . --diff'
format = 'poetry run ruff check . --fix && poetry run ruff format .'

migrate = 'poetry run alembic upgrade head'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
